img name change

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </div>
                 <div class="col-6">
                     <div class="picture">
-                        <img class="pop img-fluid" src="pic.png" alt="" />
+                        <img class="pop img-fluid" src="web-desgin-fundamental.png" alt="" />
                         <div class="week d-flex">
                             <button class="btn btn-warning">4 weeks</button>
                             <button class="btn btn-warning mx-4">Beginner</button>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="col-6">
                     <div class="picture">
-                        <img class="pop img-fluid" src="image (3).png" alt="" />
+                        <img class="pop img-fluid" src="ui-ux.png" alt="" />
                         <div class="week d-flex">
                             <button class="btn btn-warning">6 weeks</button>
                             <button class="btn btn-warning mx-4">Intermediate</button>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="col-6">
                     <div class="picture mt-5">
-                        <img class="pop img-fluid" src="image (4).png" alt="" />
+                        <img class="pop img-fluid" src="mobile-app.png" alt="" />
                         <div class="week d-flex">
                             <button class="btn btn-warning">8 weeks</button>
                             <button class="btn btn-warning mx-4">Intermediate</button>
@@ -343,7 +343,7 @@
                 </div>
                 <div class="col-6">
                     <div class="picture mt-5">
-                        <img class="pop img-fluid" src="image (1).png" alt="" />
+                        <img class="pop img-fluid" src="graphic-design.png" alt="" />
                         <div class="week d-flex">
                             <button class="btn btn-warning">10 weeks</button>
                             <button class="btn btn-warning mx-4">Beginner</button>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="col-6">
                     <div class="picture mt-5">
-                        <img class="pop img-fluid" src="image (2).png" alt="" />
+                        <img class="pop img-fluid" src="front-end-web-dev.png" alt="" />
                         <div class="week d-flex">
                             <button class="btn btn-warning">10 weeks</button>
                             <button class="btn btn-warning mx-4">Intermediate</button>
@@ -382,7 +382,7 @@
                 </div>
                 <div class="col-6">
                     <div class="picture mt-5">
-                        <img class="pop img-fluid" src="image (5).png" alt="" />
+                        <img class="pop img-fluid" src="advance-javascript.png" alt="" />
                         <div class="week d-flex">
                             <button class="btn btn-warning">6 weeks</button>
                             <button class="btn btn-warning mx-4">Advance</button>
@@ -436,14 +436,14 @@
                 </div>
                 <div class="col-6">
                     <div class="gas">
-                        <img class="img-fluid" src="image (6).png" alt="" />
+                        <img class="img-fluid" src="account-girl-1.png" alt="" />
                         <p class="mt-3 mx-3 sara">Sarah L</p>
                         <button class="btn btn-read ms-auto">Read Full Story</button>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="gas">
-                        <img class="img-fluid" src="image (7).png" alt="" />
+                        <img class="img-fluid" src="account-boy-1.png" alt="" />
                         <p class="mt-3 mx-3 sara">Jason M</p>
                         <button class="btn btn-read ms-auto">Read Full Story</button>
                     </div>
@@ -470,14 +470,14 @@
                 </div>
                 <div class="col-6">
                     <div class="gas">
-                        <img class="img-fluid" src="image (8).png" alt="" />
+                        <img class="img-fluid" src="account-girl-2.png" alt="" />
                         <p class="mt-3 mx-3 sara">Emily R</p>
                         <button class="btn btn-read ms-auto">Read Full Story</button>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="gas">
-                        <img class="img-fluid" src="image (9).png" alt="" />
+                        <img class="img-fluid" src="account-boy-2.png" alt="" />
                         <p class="mt-3 mx-3 sara">Michael K</p>
                         <button class="btn btn-read ms-auto">Read Full Story</button>
                     </div>
