making pull request

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                         </div>
                         <div class="horizon">
                             <p class="for">
-                                Enrollment Process for Different Courses
+                                Enrollment Process for Different Courses Courses
                                 <svg class="path" xmlns="http://www.w3.org/2000/svg" width="60" height="60"
                                     viewBox="0 0 28 28" fill="none">
                                     <path d="M6.99967 14H21.583M21.583 14L14.583 7M21.583 14L14.583 21" stroke="#4C4C4C"
