--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </nav>
         </div>
     </header>
-    <section>
+    <!-- <section>
         <div class="container">
             <div class="row">
                 <div class="col-12 column">
@@ -159,7 +159,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section> 
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -700,9 +700,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section>
+    <!-- <section>
         <div class="container">
             <div class="row">
                 <div class="col-6 asked">
@@ -738,7 +738,6 @@
                         </div>
 
                         <hr class="hr" />
-                        <!-- <hr class="hr"> -->
 
                         <div>
                             <p class="at">
@@ -748,7 +747,7 @@
                         </div>
                         <div class="horizon">
                             <p class="for">
-                                Enrollment Process for Different Courses Courses
+                                Enrollment Process for Different Courses
                                 <svg class="path" xmlns="http://www.w3.org/2000/svg" width="60" height="60"
                                     viewBox="0 0 28 28" fill="none">
                                     <path d="M6.99967 14H21.583M21.583 14L14.583 7M21.583 14L14.583 21" stroke="#4C4C4C"
@@ -819,13 +818,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="text-center text-lg-start">
-        <!-- Grid container -->
         <div class="container p-4">
-            <!--Grid row-->
             <div class="row">
-                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"
                             fill="none" class="icons">
@@ -903,7 +899,7 @@
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-uppercase mb-0 foot">Social Profiles</h5>
-                    <div class="d-flex mt-2">
+                    <div class="d-flex mt-2 justify-content-center justify-content-xl-start justify-content-lg-start justify-content-md-center justify-content-sm-center ">
                         <div class="px-3 facebook">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
