add course pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <a class="nav-link" active href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Courses</a>
+                                <a class="nav-link" href="/course.html">Courses</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About Us</a>
@@ -113,14 +113,14 @@
                     <div class="sponsered w-100 h-100">
                         <ul class="sponsor-list mx-auto d-flex">
                             <li class="image">
-                                <img class="img-fluid" src="first l.svg" alt="" />
+                                <img class="img-fluid-lg" src="first l.svg" alt="" />
                             </li>
 
                             <li class="image">
-                                <img class="img-fluid" src="spotify logo.svg" alt="" />
+                                <img class="img-fluid-lg" src="spotify logo.svg" alt="" />
                             </li>
                             <li class="image">
-                                <img class="img-fluid" src="z logo.svg" alt="" />
+                                <img class="img-fluid-lg" src="z logo.svg" alt="" />
                             </li>
                             <li class="image">
                                 <img class="img-fluid" src="amazon.svg" alt="" />
