--- a/course.html
+++ b/course.html
@@ -113,11 +113,10 @@
                     <h4 class="ms-auto">By David Brown</h4>
                 </div>
                 <div class="box mt-5">
-                    <p>Curriculum</p>
-                    <hr class="color">
-                    <div class="box-bottom">
-
-                    </div>
+                   <div class="curriculum-box">
+                    Curriculum
+                   </div>
+                
                 </div>
             </div>
         </div>
