add aboutus page

--- a/course.html
+++ b/course.html
@@ -43,10 +43,10 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mt-3">
                             <li class="nav-item">
-                                <a class="nav-link" active href="#">Home</a>
+                                <a class="nav-link" active href="">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Courses</a>
+                                <a class="nav-link" href="course.html">Courses</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About Us</a>
@@ -94,7 +94,7 @@
                         <h5>Web Design Fundamentals</h5>
                         <div class="d-flex">
                         <p class="fundamentals">Learn the fundamentals of web design, including HTML, CSS, and responsive design principles. Develop the skills to create visually <br> appealing and user-friendly websites.</p>
-                        <button class="btn btn-course mx-5 mb-4">View Course</button>
+                       <a class="creative" href="/course-page.html"> <button class="btn btn-course mx-5 mb-4">View Course</button></a>
                         </div>
                     </div>
                 </div>
