--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <a class="nav-link" href="/course.html">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="/about-us.html">About Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Pricing</a>
