our course page has been responsive

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     <div class="container">
         <div class="row">
             <div class="col-8">
-                <div class="form-background ">
+                <!-- <div class="form-background ">
                     <div class="d-flex">
                         <div class="mx-3">
                             <label for="inputPassword5" class="form-label">First Name</label>
@@ -124,39 +124,112 @@
                             aria-describedby="passwordHelpBlock" placeholder="Enter your Message here...">
                     </div>
 
-                    <!-- <div>
-                    <label for="inputPassword5" class="form-label">Password</label>
-                    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-                </div>
-                <div>
-                    <label for="inputPassword5" class="form-label">Password</label>
-                    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-                </div> -->
-                </div>
+                    </div> -->
+                    <form>
+                        <div class="form-row">
+                          <div class="col-md-4 mb-3">
+                            <label for="validationServer01">First name</label>
+                            <input type="text" class="form-control is-valid" id="validationServer01" placeholder="First name" value="Mark" required>
+                            <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                          </div>
+                          <div class="col-md-4 mb-3">
+                            <label for="validationServer02">Last name</label>
+                            <input type="text" class="form-control is-valid" id="validationServer02" placeholder="Last name" value="Otto" required>
+                            <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                          </div>
+                          <div class="col-md-4 mb-3">
+                            <label for="validationServerUsername">Username</label>
+                            <div class="input-group">
+                              <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupPrepend3">@</span>
+                              </div>
+                              <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupPrepend3" required>
+                              <div class="invalid-feedback">
+                                Please choose a username.
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-6 mb-3">
+                            <label for="validationServer03">City</label>
+                            <input type="text" class="form-control is-invalid" id="validationServer03" placeholder="City" required>
+                            <div class="invalid-feedback">
+                              Please provide a valid city.
+                            </div>
+                          </div>
+                          <div class="col-md-3 mb-3">
+                            <label for="validationServer04">State</label>
+                            <input type="text" class="form-control is-invalid" id="validationServer04" placeholder="State" required>
+                            <div class="invalid-feedback">
+                              Please provide a valid state.
+                            </div>
+                          </div>
+                          <div class="col-md-3 mb-3">
+                            <label for="validationServer05">Zip</label>
+                            <input type="text" class="form-control is-invalid" id="validationServer05" placeholder="Zip" required>
+                            <div class="invalid-feedback">
+                              Please provide a valid zip.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="form-check">
+                            <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" required>
+                            <label class="form-check-label" for="invalidCheck3">
+                              Agree to terms and conditions
+                            </label>
+                            <div class="invalid-feedback">
+                              You must agree before submitting.
+                            </div>
+                          </div>
+                        </div>
+                        <button class="btn btn-primary" type="submit">Submit form</button>
+                      </form>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-3">
                 <div class="form-box d-flex">
-                    <svg class="support" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 21" fill="none">
+                    <svg class="support" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 21"
+                        fill="none">
                         <path
                             d="M1.25 7.97425V15.125C1.25 16.5057 2.36929 17.625 3.75 17.625H16.25C17.6307 17.625 18.75 16.5057 18.75 15.125V7.97425L11.3102 12.5526C10.5067 13.047 9.49327 13.047 8.68976 12.5526L1.25 7.97425Z"
                             fill="#262626" />
                         <path
                             d="M18.75 6.50652V6.375C18.75 4.99429 17.6307 3.875 16.25 3.875H3.75C2.36929 3.875 1.25 4.99429 1.25 6.375V6.50652L9.34488 11.488C9.74664 11.7352 10.2534 11.7352 10.6551 11.488L18.75 6.50652Z"
                             fill="#262626" />
-                       
+                        <span class="com">
+                            support@skillbridge.com
+                        </span>
                     </svg>
                     <span class="com">
                         support@skillbridge.com
                     </span>
-
-
-
-
-
                 </div>
-            </div>
+                <div class="form-box d-flex">
+                    <svg class="support" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 21"
+                        fill="none">
+                        <path
+                            d="M1.25 7.97425V15.125C1.25 16.5057 2.36929 17.625 3.75 17.625H16.25C17.6307 17.625 18.75 16.5057 18.75 15.125V7.97425L11.3102 12.5526C10.5067 13.047 9.49327 13.047 8.68976 12.5526L1.25 7.97425Z"
+                            fill="#262626" />
+                        <path
+                            d="M18.75 6.50652V6.375C18.75 4.99429 17.6307 3.875 16.25 3.875H3.75C2.36929 3.875 1.25 4.99429 1.25 6.375V6.50652L9.34488 11.488C9.74664 11.7352 10.2534 11.7352 10.6551 11.488L18.75 6.50652Z"
+                            fill="#262626" />
+                        <span class="com">
+                            support@skillbridge.com
+                        </span>
+                    </svg>
+                    <span class="com">
+                        support@skillbridge.com
+                    </span>
+                </div>
+            </div> -->
 
 
         </div>
     </div>
+    
     </div>
