--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-lg-6 col-sm-12">
                 <div class="testimonials">
                     <h3 class="students">Students Testimonials</h3>
                     <p class="sit">Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet
@@ -89,7 +89,7 @@
                         senectus in.</p>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-lg-6 col-sm-12">
                 <div class="form mx-3">
                     <div>
                         <h2 class="login-form">Login</h2>
@@ -168,7 +168,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-sm-12 col-lg-6">
+            <div class="col-6 col-lg-6 col-sm-6">
                 <div>
                     <p class="foundation">
                         The web design course provided a solid foundation for me. The
