add contact page has benn responsive

--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,7 @@
     <title>Contact-Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="contact-us.css">
+    <link rel="stylesheet" href="contact-media.css">
 </head>
 <body>
     <!-- <div class="container">
@@ -79,12 +80,12 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-lg-6 col-sm-12">
                 <div>
                     <h1>Contact Us</h1>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-lg-6 col-sm-12">
                 <div>
                     <p class="welcome">Welcome to SkillBridge's Pricing Plan page, where we offer two comprehensive options to cater to your needs: Free and Pro. We believe in providing flexible and affordable pricing options for our services. Whether you're an individual looking to enhance your skills or a business seeking professional development solutions, we have a plan that suits you. Explore our pricing options below and choose the one that best fits your requirements.</p>
                 </div>
@@ -93,7 +94,7 @@
     </div>
     <div class="container ">
         <div class="row">
-            <div class="col-8 backward">
+            <div class="col-12 col-lg-8 col-sm-12 backward">
                 <div class="">
                     <div class="d-flex">
                         <div class="mx-3">
@@ -132,7 +133,7 @@
 
                 </div>
             </div>
-            <div class="col-4 backward">
+            <div class="col-12 col-lg-4 col-sm-12 backward">
                 <div class="open mt-3">
                     <svg class="svgs" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 21" fill="none">
                         <path d="M1.25 7.97425V15.125C1.25 16.5057 2.36929 17.625 3.75 17.625H16.25C17.6307 17.625 18.75 16.5057 18.75 15.125V7.97425L11.3102 12.5526C10.5067 13.047 9.49327 13.047 8.68976 12.5526L1.25 7.97425Z" fill="#262626"/>
